make iOS 11 compatible

--- a/Terra Planet/Views/Onboarding/Onboarding.storyboard
+++ b/Terra Planet/Views/Onboarding/Onboarding.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -199,8 +200,8 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="address" destination="h0e-Dd-Ybs" id="n7M-Hh-qEo"/>
-                        <outlet property="seed" destination="xkg-hV-Egg" id="O2Y-5N-lte"/>
+                        <outlet property="addressLabel" destination="h0e-Dd-Ybs" id="qbt-JY-wsH"/>
+                        <outlet property="seedLabel" destination="xkg-hV-Egg" id="cwh-rp-Lki"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p9u-Ze-gk1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
