--- a/Terra Planet/Views/Onboarding/Onboarding.storyboard
+++ b/Terra Planet/Views/Onboarding/Onboarding.storyboard
@@ -43,11 +43,12 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="dnP-Vs-KpN"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="tintColor" name="color_blue"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="CREATE NEW WALLET">
-                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="15"/>
-                                </buttonConfiguration>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="CREATE NEW WALLET">
+                                    <color key="titleColor" name="color_blue"/>
+                                </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                         <integer key="value" value="8"/>
@@ -165,10 +166,11 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="SCQ-BG-t0m"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="CONTINUE">
-                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="15"/>
-                                </buttonConfiguration>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="CONTINUE">
+                                    <color key="titleColor" name="color_blue"/>
+                                </state>
                                 <connections>
                                     <action selector="continue:" destination="0ef-gU-pYh" eventType="touchUpInside" id="9dk-Vf-Y0u"/>
                                 </connections>
