--- a/Terra Planet/Views/Send/Send.storyboard
+++ b/Terra Planet/Views/Send/Send.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -44,8 +45,8 @@
                                     <constraint firstAttribute="height" constant="40" id="kO4-U6-Bsm"/>
                                 </constraints>
                                 <color key="tintColor" name="color_blue"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="qrcode.viewfinder" catalog="system"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="qrcode.viewfinder" catalog="system"/>
                                 <connections>
                                     <action selector="scanAddress:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="pLT-6d-4M6"/>
                                 </connections>
@@ -56,11 +57,10 @@
                                     <constraint firstAttribute="width" constant="60" id="v0h-cM-woB"/>
                                     <constraint firstAttribute="height" constant="40" id="xmi-eH-C3p"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="tintColor" name="color_blue"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Paste">
-                                    <fontDescription key="titleFontDescription" type="system" pointSize="14"/>
-                                </buttonConfiguration>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Paste"/>
                                 <connections>
                                     <action selector="pasteAddress:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="BIX-ch-UIQ"/>
                                 </connections>
@@ -95,8 +95,7 @@
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oeX-nN-xee">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="60"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <connections>
                                             <action selector="selectCoin:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ofM-v9-k5s"/>
                                         </connections>
@@ -152,11 +151,10 @@
                                     <constraint firstAttribute="width" constant="100" id="N32-6R-fMN"/>
                                     <constraint firstAttribute="height" constant="40" id="oVq-Vq-r8T"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="SEND">
-                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="15"/>
-                                </buttonConfiguration>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="SEND"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                         <integer key="value" value="8"/>
