--- a/Terra Planet/Views/Onboarding/Onboarding.storyboard
+++ b/Terra Planet/Views/Onboarding/Onboarding.storyboard
@@ -38,7 +38,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dij-4F-b3R">
-                                <rect key="frame" x="30" y="792" width="354" height="40"/>
+                                <rect key="frame" x="30" y="732" width="354" height="40"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="dnP-Vs-KpN"/>
@@ -58,18 +58,41 @@
                                     <action selector="createWallet:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Xi4-ta-pu7"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hxM-3w-ddY">
+                                <rect key="frame" x="30" y="792" width="354" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="x5l-Kv-A5K"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <color key="tintColor" name="color_blue"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="IMPORT WALLET">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="import:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="dJw-az-ptm"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" name="color_blue"/>
                         <constraints>
+                            <constraint firstItem="hxM-3w-ddY" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="17E-Ia-Rrb"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="hxM-3w-ddY" secondAttribute="bottom" constant="30" id="6Qz-O1-V0Q"/>
                             <constraint firstItem="dij-4F-b3R" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="AE8-9H-zUw"/>
                             <constraint firstAttribute="trailing" secondItem="fot-I0-C5a" secondAttribute="trailing" constant="20" id="DEr-zh-om6"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="hxM-3w-ddY" secondAttribute="trailing" constant="30" id="GLa-CD-7dF"/>
                             <constraint firstItem="fot-I0-C5a" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="HNe-dV-Ols"/>
                             <constraint firstItem="Rsw-Vn-RSC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="JER-KK-bKD"/>
+                            <constraint firstItem="hxM-3w-ddY" firstAttribute="top" secondItem="dij-4F-b3R" secondAttribute="bottom" constant="20" id="OFu-Xk-Vqi"/>
                             <constraint firstItem="Rsw-Vn-RSC" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="XGY-MN-ucQ"/>
                             <constraint firstItem="BZ9-Zh-Y71" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="bBb-97-48l"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="dij-4F-b3R" secondAttribute="trailing" constant="30" id="cwc-M4-HdX"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="dij-4F-b3R" secondAttribute="bottom" constant="30" id="g3z-Zt-pwC"/>
                             <constraint firstItem="fot-I0-C5a" firstAttribute="top" secondItem="BZ9-Zh-Y71" secondAttribute="bottom" constant="30" id="sBF-P4-6Wq"/>
                             <constraint firstItem="BZ9-Zh-Y71" firstAttribute="top" secondItem="Rsw-Vn-RSC" secondAttribute="bottom" constant="30" id="uvh-hb-KfA"/>
                         </constraints>
@@ -79,6 +102,82 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
+        </scene>
+        <!--Import WalletVC-->
+        <scene sceneID="RS0-CQ-5Cu">
+            <objects>
+                <viewController restorationIdentifier="ImportWalletVC" storyboardIdentifier="ImportWalletVC" id="Saf-oe-Z4T" customClass="ImportWalletVC" customModule="Terra_Planet" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xJe-7g-Anj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Import Wallet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3n8-Gx-fsb">
+                                <rect key="frame" x="113" y="74" width="188" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="12f-i8-i1E">
+                                <rect key="frame" x="20" y="166" width="374" height="128"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="IoK-nX-k4N"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="delegate" destination="Saf-oe-Z4T" id="Oe4-M4-dim"/>
+                                </connections>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seed Phrase:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bji-fz-n1A">
+                                <rect key="frame" x="20" y="140" width="94.5" height="18"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lUE-Ww-1jh">
+                                <rect key="frame" x="20" y="792" width="374" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="qNf-w4-pyu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="CONTINUE">
+                                    <color key="titleColor" name="color_blue"/>
+                                </state>
+                                <connections>
+                                    <action selector="getWallet:" destination="Saf-oe-Z4T" eventType="touchUpInside" id="ogM-dD-Qe4"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="OAn-cg-8gJ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="OAn-cg-8gJ" firstAttribute="bottom" secondItem="lUE-Ww-1jh" secondAttribute="bottom" constant="30" id="1TM-Pm-bX3"/>
+                            <constraint firstItem="OAn-cg-8gJ" firstAttribute="trailing" secondItem="lUE-Ww-1jh" secondAttribute="trailing" constant="20" id="BZp-sa-2wD"/>
+                            <constraint firstItem="Bji-fz-n1A" firstAttribute="top" secondItem="3n8-Gx-fsb" secondAttribute="bottom" constant="30" id="Det-cM-A8m"/>
+                            <constraint firstItem="OAn-cg-8gJ" firstAttribute="trailing" secondItem="12f-i8-i1E" secondAttribute="trailing" constant="20" id="QOL-HA-Owu"/>
+                            <constraint firstItem="Bji-fz-n1A" firstAttribute="leading" secondItem="OAn-cg-8gJ" secondAttribute="leading" constant="20" id="Xhy-U4-5IH"/>
+                            <constraint firstItem="12f-i8-i1E" firstAttribute="top" secondItem="Bji-fz-n1A" secondAttribute="bottom" constant="8" id="eRs-jF-aYp"/>
+                            <constraint firstItem="3n8-Gx-fsb" firstAttribute="centerX" secondItem="xJe-7g-Anj" secondAttribute="centerX" id="fFg-j4-u8S"/>
+                            <constraint firstItem="3n8-Gx-fsb" firstAttribute="top" secondItem="OAn-cg-8gJ" secondAttribute="top" constant="30" id="mGw-C8-ynt"/>
+                            <constraint firstItem="lUE-Ww-1jh" firstAttribute="leading" secondItem="OAn-cg-8gJ" secondAttribute="leading" constant="20" id="ycv-mH-jZF"/>
+                            <constraint firstItem="12f-i8-i1E" firstAttribute="leading" secondItem="OAn-cg-8gJ" secondAttribute="leading" constant="20" id="zS7-r4-CqV"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="seedTextview" destination="12f-i8-i1E" id="tnb-h5-EVN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rax-Rc-C5l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2016" y="591"/>
         </scene>
         <!--New Wallet InfoVC-->
         <scene sceneID="u9m-Sf-4Nr">
@@ -208,7 +307,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p9u-Ze-gk1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1839" y="138"/>
+            <point key="canvasLocation" x="2017" y="-108"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IDo-dE-oBj">
@@ -233,8 +332,14 @@
         <namedColor name="color_blue">
             <color red="0.10980392156862745" green="0.23137254901960785" blue="0.62352941176470589" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
