--- a/Terra Planet/Views/Home/Home.storyboard
+++ b/Terra Planet/Views/Home/Home.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total Balance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IN7-Rg-Qia">
-                                <rect key="frame" x="20" y="74" width="374" height="17"/>
+                                <rect key="frame" x="20" y="74" width="90.5" height="17"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -323,6 +323,22 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bkh-rh-pbC">
+                                <rect key="frame" x="364" y="74" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="EvD-54-R00"/>
+                                    <constraint firstAttribute="height" constant="30" id="dzz-Zc-bE7"/>
+                                </constraints>
+                                <color key="tintColor" name="color_blue"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="arrow.clockwise" catalog="system">
+                                    <color key="titleColor" name="color_blue"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="bold"/>
+                                </state>
+                                <connections>
+                                    <action selector="reload:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="CFI-0k-SuD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -333,10 +349,10 @@
                             <constraint firstItem="cg5-KV-m7c" firstAttribute="top" secondItem="tyW-4m-mfX" secondAttribute="bottom" constant="20" id="As3-P5-GpU"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="3ZH-uc-Ie3" secondAttribute="trailing" constant="20" id="EdC-3q-yX2"/>
                             <constraint firstItem="tyW-4m-mfX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="GlT-dM-TKM"/>
+                            <constraint firstItem="bkh-rh-pbC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="H92-aG-6Dy"/>
                             <constraint firstItem="iXa-oQ-PH0" firstAttribute="top" secondItem="cg5-KV-m7c" secondAttribute="bottom" constant="8" id="LGk-lQ-6B0"/>
                             <constraint firstItem="Flo-e6-6RA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="N2A-4Y-Y5v"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Flo-e6-6RA" secondAttribute="trailing" constant="20" id="Rf7-tP-PVO"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="IN7-Rg-Qia" secondAttribute="trailing" constant="20" id="ZXq-lS-r6h"/>
                             <constraint firstItem="tyW-4m-mfX" firstAttribute="top" secondItem="kUb-Wp-1ej" secondAttribute="bottom" constant="8" id="cSM-1z-tKf"/>
                             <constraint firstItem="Cg3-E4-dfb" firstAttribute="top" secondItem="Flo-e6-6RA" secondAttribute="bottom" constant="8" id="dhG-Oz-HXA"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="tyW-4m-mfX" secondAttribute="trailing" constant="20" id="eZ9-Y0-exF"/>
@@ -349,6 +365,7 @@
                             <constraint firstItem="3ZH-uc-Ie3" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="qMr-fX-dUz"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="cg5-KV-m7c" secondAttribute="trailing" constant="20" id="qhk-Pt-gE6"/>
                             <constraint firstItem="3ZH-uc-Ie3" firstAttribute="top" secondItem="IN7-Rg-Qia" secondAttribute="bottom" constant="8" id="rwc-do-th9"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="bkh-rh-pbC" secondAttribute="trailing" constant="20" id="wSX-su-vXc"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Cg3-E4-dfb" secondAttribute="trailing" constant="20" id="wXY-wO-Dup"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="iXa-oQ-PH0" secondAttribute="trailing" constant="20" id="xeA-O0-Ghw"/>
                             <constraint firstItem="iXa-oQ-PH0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="z2b-Fd-Lou"/>
@@ -373,6 +390,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
         <image name="arrow.down" catalog="system" width="120" height="128"/>
         <image name="arrow.down.right" catalog="system" width="128" height="112"/>
         <image name="arrow.left.arrow.right" catalog="system" width="119" height="128"/>
